# lyricsrs

./: Cargo.toml  README.md
.github/workflows/: main.yml
src/: main.rs
tests/: test.rs
tests/common/: mod.rs
tests/data/: template.lrc
