[package]
name = "lyricsrs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lyricsrs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lofty = "0.20.1"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.3"
walkdir = "2.5.0"
